# napari-splineit2

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: test_and_deploy.yml
docs/: conf.py
sandbox/: ip.py
src/napari_splineit2/: __init__.py  _reader.py  _sample_data.py  _widget.py  _writer.py  napari.yml  splinegenerator.py
src/napari_splineit2/_tests/: test_sample_data.py  test_widget.py
src/napari_splineit2/interpolation/: __init__.py  cubic.py  spline.py  splinegenerator.py  utils.py
src/napari_splineit2/layer/: _ctrl_layer.py  _interpolated_layer.py  _shape_list.py  layer_factory.py
