[metadata]
name = napari-splineit2

author = Thorsten Beier
author_email = derthorstenbeier@gmail.com
url = https://github.com/DerThorsten/napari-splineit2
license = BSD-3-Clause
description = A napari plugin for spline manipulation
long_description = file: README.md
long_description_content_type = text/markdown
include_package_data = True
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/DerThorsten/napari-splineit2/issues
    Documentation = https://github.com/DerThorsten/napari-splineit2#README.md
    Source Code = https://github.com/DerThorsten/napari-splineit2
    User Support = https://github.com/DerThorsten/napari-splineit2/issues

[options]
packages = find:
python_requires = >=3.7
package_dir =
    =src
setup_requires = setuptools_scm
# add your package requirements here
install_requires =
    numpy

[options.packages.find]
where = src

[options.package_data]
napari-splineit2 = 
    napari.yml

[options.entry_points] 
napari.manifest = 
    napari-splineit2 = napari_splineit2:napari.yml
